[gd_scene load_steps=7 format=3 uid="uid://bq6klx7r2ucke"]

[ext_resource type="Script" uid="uid://b628px54dh5uh" path="res://Scripts/character_body_2d.gd" id="1_ushfy"]
[ext_resource type="Texture2D" uid="uid://hgp0axr24rcx" path="res://Assets/practice_yy.png" id="2_owm7s"]
[ext_resource type="Texture2D" uid="uid://b2j0n1q36lvx2" path="res://Assets/kanyewest.png" id="3_ejsiy"]
[ext_resource type="Texture2D" uid="uid://ker4udtiisit" path="res://Assets/phoenix (1).jpg" id="3_nytcm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ushfy"]
height = 56.0

[sub_resource type="SpriteFrames" id="SpriteFrames_px5sl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ejsiy")
}],
"loop": true,
"name": &"black",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"both",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_nytcm")
}],
"loop": true,
"name": &"phoenix",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_owm7s")
}],
"loop": true,
"name": &"white",
"speed": 5.0
}]

[node name="Character" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("1_ushfy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_ushfy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
sprite_frames = SubResource("SpriteFrames_px5sl")
animation = &"black"

[node name="jump_timer" type="Timer" parent="CharacterBody2D"]
wait_time = 0.111
one_shot = true

[node name="dash_timer" type="Timer" parent="CharacterBody2D"]
wait_time = 0.136
one_shot = true

[node name="coyote_timer" type="Timer" parent="CharacterBody2D"]
wait_time = 0.107
one_shot = true

[node name="phoenix_timer" type="Timer" parent="CharacterBody2D"]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="CharacterBody2D/coyote_timer" to="CharacterBody2D" method="_on_coyote_timer_timeout"]
